updated backbone layout
- added a base view and collection class for common methods
- updated the way data is passed through to views from routes

--- a/public/templates/categories.hbs
+++ b/public/templates/categories.hbs
@@ -1,7 +1,6 @@
 <h1>Categories</h1>
-
 <ul>
-{{#each categories}}
-  <li><a href="/#/categories/{{key}}">{{name}}</a></li>
+{{#each}}
+  <li><a href="/#/categories/{{id}}">{{name}}</a></li>
 {{/each}}
 </ul>
