updated templates to use the .wrapper class

--- a/public/templates/categories.hbs
+++ b/public/templates/categories.hbs
@@ -1,6 +1,8 @@
-<h1>Categories</h1>
-<ul>
-{{#each}}
-  <li><a href="/#/categories/{{id}}">{{name}}</a></li>
-{{/each}}
-</ul>
+<div class="wrapper">
+  <h1>Categories</h1>
+  <ul>
+  {{#each}}
+    <li><a href="/#/categories/{{id}}">{{name}}</a></li>
+  {{/each}}
+  </ul>
+</div>
