--- a/public/templates/category.hbs
+++ b/public/templates/category.hbs
@@ -1,7 +1,8 @@
-<h1>{{name}}</h1>
-
-<ul>
-{{#each products}}
-  <li><a href="/#/products/{{id}}">{{name}}</a></li>
-{{/each}}
-</ul>
+<div class="wrapper">
+  <h1>{{name}}</h1>
+  <ul>
+  {{#each products}}
+    <li><a href="/#/products/{{id}}">{{name}}</a></li>
+  {{/each}}
+  </ul>
+</div>
