--- a/public/templates/product-new.hbs
+++ b/public/templates/product-new.hbs
@@ -5,6 +5,10 @@
       <label for="name">Name</label>
       <input type="text" class="form-control" id="name">
     </div>
+    <div class="form-group">
+      <label for="category">Category</label>
+      <select class="form-control" id="category" placeholder="Enter a category..."></select>
+    </div>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
 </div>
