--- a/public/templates/product-new.hbs
+++ b/public/templates/product-new.hbs
@@ -3,11 +3,7 @@
   <form role="form">
     <div class="form-group">
       <label for="name">Name</label>
-      <input type="text" class="form-control" id="name">
-    </div>
-    <div class="form-group">
-      <label for="category">Category</label>
-      <select class="form-control" id="category" placeholder="Enter a category..."></select>
+      <select class="form-control" id="name" placeholder="Enter a name..."></select>
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
