--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -1,5 +1,7 @@
 <div class="wrapper">
   <h1>{{name}}</h1>
+  <p>{{product_data.model}}</p>
+  <p>{{product_data.brand}}</p>
   <h2>Categories</h2>
   <ul>
   {{#each categories}}
