--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -8,17 +8,35 @@
     <li>{{id}}-{{name}}</li>
   {{/each}}
   </ul>
+
   <h2>Reviews</h2>
+
+  <div class="container-fluid">
+  <div class="row">
+  <div class="col-xs-6">
   <h3>Positive</h3>
   <ul id="positive">
   {{#each positiveReviews}}
     <li>{{text}}</li>
   {{/each}}
   </ul>
+  <form id='add-positive'>
+    <input type="text" name="text" placeholder="Add a positive review">
+    <button id="add-positive" class="btn btn-default">Add</button>
+  </form>
+
+  <div class="col-xs-6">
   <h3>Negative</h3>
   <ul id="negative">
   {{#each negativeReviews}}
     <li>{{text}}</li>
   {{/each}}
   </ul>
+  <form id='add-negative'>
+    <input type="text" name="text" placeholder="Add a negative review">
+    <button type="submit" class="btn btn-default">Add</button>
+  </form>
+  </div>
+  </div>
+  </div>
 </div>
