added navbar and a main app view

--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -21,4 +21,8 @@
     <li>{{text}}</li>
   {{/each}}
   </ul>
+  <form id="form">
+    <input type="text" id="text"/>
+    <button type="submit">Submit</button>
+  </form>
 </div>
