Fixed the category api
- A product's category is now set based on the product selected from the Semantics3 api.

Closes #12

--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -2,12 +2,7 @@
   <h1>{{name}}</h1>
   <p>{{product_data.model}}</p>
   <p>{{product_data.brand}}</p>
-  <h2>Categories</h2>
-  <ul>
-  {{#each categories}}
-    <li>{{id}}-{{name}}</li>
-  {{/each}}
-  </ul>
+  <p><span class="label label-default">{{category}}</span></p>
 
   <h2>Reviews</h2>
 
@@ -37,6 +32,6 @@
     <button type="submit" class="btn btn-default">Add</button>
   </form>
   </div>
-  
+
   </div>
 </div>
