--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -2,12 +2,7 @@
   <h1>{{name}}</h1>
   <p>{{product_data.model}}</p>
   <p>{{product_data.brand}}</p>
-  <h2>Categories</h2>
-  <ul>
-  {{#each categories}}
-    <li>{{id}}-{{name}}</li>
-  {{/each}}
-  </ul>
+  <p><span class="label label-default">{{category}}</span></p>
 
   <h2>Reviews</h2>
 
@@ -20,9 +15,9 @@
     <li>{{text}}</li>
   {{/each}}
   </ul>
-  <form id='add-positive'>
-    <input type="text" name="text" placeholder="Add a positive review">
-    <button id="add-positive" class="btn btn-default">Add</button>
+  <form id='add-positive' class="form-inline">
+    <input type="text" name="text" class="form-control input-lg" id="positive-input" placeholder="Add a positive review">
+    <button id="add-positive" class="btn btn-default hide">Add</button>
   </form>
   </div>
   <div class="col-xs-6">
@@ -32,11 +27,10 @@
     <li>{{text}}</li>
   {{/each}}
   </ul>
-  <form id='add-negative'>
-    <input type="text" name="text" placeholder="Add a negative review">
-    <button type="submit" class="btn btn-default">Add</button>
+  <form id='add-negative' class="form-inline">
+    <input type="text" name="text" class="form-control input-lg" id="negative-input" placeholder="Add a negative review">
+    <button type="submit" class="btn btn-default hide">Add</button>
   </form>
   </div>
-  
   </div>
 </div>
