--- a/public/templates/nav.hbs
+++ b/public/templates/nav.hbs
@@ -7,12 +7,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Simple Reviews</a>
+      <a class="navbar-brand" href="/"><img src="/img/small.png" alt="Simple Reviews"></a>
     </div>
     <div class="navbar-collapse collapse" style="height: 1px;">
-      <ul class="nav navbar-nav">
-        <li><a href="/">Categories</a></li>
-      </ul>
       <ul class="nav navbar-nav pull-right">
         <li><a href="/">Sign in</a></li>
       </ul>
