more cosmetic changes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,3 +13,19 @@ body .navbar-brand {
   padding-left: 40px;
   padding-right: 40px;
 }
+
+.list-group-item {
+    font-weight:bold;
+    margin-bottom:5px;
+    border:0;
+}
+
+.badge {
+    color:#000;
+    background-color:#FFF;
+    border-radius:0;
+}
+
+.add-review {
+    width:100%;
+}
