added page header class to product page

--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -1,7 +1,9 @@
 <div class="wrapper">
-    <h1>{{name}} <small>{{product_data.model}}</small></h1>
-    <a href="#/categories/{{category.id}}"><span class="label label-primary">{{category}}</span></a> 
-    <span class="label label-default">{{product_data.brand}}</span>
+    <div class="page-header">
+        <h1>{{name}} <small>{{product_data.model}}</small></h1>
+        <a href="#/categories/{{category.id}}"><span class="label label-primary">{{category}}</span></a> 
+        <span class="label label-default">{{product_data.brand}}</span>
+    </div>
 
     <div class="container-fluid">
         <div class="row">
