forgot to push updated product template

--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -62,5 +62,34 @@
                 </form>
             </div>
         </div>
+        <div class="row">
+            <h3>Youtube</h3>
+            <div class="media-wrapper">
+              <div class="scrolls">
+                   <img src="http://placehold.it/250x150" />
+                   <img src="http://placehold.it/250x150" />
+                   <img src="http://placehold.it/250x150" />
+                   <img src="http://placehold.it/250x150" />
+              </div>
+          </div>
+        </div>
+
+        <div class="row">
+            <h3>Instagram</h3>
+            <div class="media-wrapper">
+              <div class="scrolls">
+                   <img src="http://placehold.it/150x150" />
+                   <img src="http://placehold.it/150x150" />
+                   <img src="http://placehold.it/150x150" />
+                   <img src="http://placehold.it/150x150" />
+                   <img src="http://placehold.it/150x150" />
+                   <img src="http://placehold.it/150x150" />
+                   <img src="http://placehold.it/150x150" />
+                   <img src="http://placehold.it/150x150" />
+                   <img src="http://placehold.it/150x150" />
+              </div>
+          </div>
+        </div>
+
     </div>
 </div>
