basic youtube functionality added

--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -65,11 +65,7 @@
         <div class="row">
             <h3>Youtube</h3>
             <div class="media-wrapper">
-              <div class="scrolls">
-                   <img src="http://placehold.it/250x150" />
-                   <img src="http://placehold.it/250x150" />
-                   <img src="http://placehold.it/250x150" />
-                   <img src="http://placehold.it/250x150" />
+              <div id="videos" class="scrolls">
               </div>
           </div>
         </div>
