basic instagram implemented, need to update product form to store tags to finish

--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -73,16 +73,7 @@
         <div class="row">
             <h3>Instagram</h3>
             <div class="media-wrapper">
-              <div class="scrolls">
-                   <img src="http://placehold.it/150x150" />
-                   <img src="http://placehold.it/150x150" />
-                   <img src="http://placehold.it/150x150" />
-                   <img src="http://placehold.it/150x150" />
-                   <img src="http://placehold.it/150x150" />
-                   <img src="http://placehold.it/150x150" />
-                   <img src="http://placehold.it/150x150" />
-                   <img src="http://placehold.it/150x150" />
-                   <img src="http://placehold.it/150x150" />
+              <div id="instagram" class="scrolls">
               </div>
           </div>
         </div>
