updated product-new form, instagram is working!

--- a/public/templates/product-new.hbs
+++ b/public/templates/product-new.hbs
@@ -5,6 +5,11 @@
       <label for="name">Name</label>
       <select class="form-control" id="name" placeholder="Enter a name..."></select>
     </div>
+
+    <div class="form-group">
+      <label for="insta">Instagram Tag</label>
+      <select class="form-control" id="insta" placeholder="Enter the Instagram Tag for this product"></select>
+    </div>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
 </div>
