added sign in link to the navbar

--- a/public/templates/nav.hbs
+++ b/public/templates/nav.hbs
@@ -11,7 +11,7 @@
     </div>
     <div class="navbar-collapse collapse" style="height: 1px;">
       <ul class="nav navbar-nav pull-right">
-        <li><a href="/">Sign in</a></li>
+        <li><a href="/#/signin">Sign in</a></li>
       </ul>
     </div>
   </div>
