--- a/public/templates/signin.hbs
+++ b/public/templates/signin.hbs
@@ -1,4 +1,10 @@
 <div class="wrapper">
+  {{#if error.message}}
+    <div class="alert alert-danger alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+      {{error.message}}
+    </div>
+  {{/if}}
   <div class="auth-form">
     <div class="panel panel-default">
       <div class="panel-heading">
@@ -8,11 +14,11 @@
           <form role="form">
             <div class="form-group">
               <label for="email">Email</label>
-              <input type="email" class="form-control" name="email"/>
+              <input type="email" class="form-control" id="email" value="{{email}}"/>
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" name="password"/>
+              <input type="password" class="form-control" id="password"/>
             </div>
             <input type="submit" class="btn btn-default" value="Sign in">
           </form>
