--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -128,3 +128,25 @@ body h1 {
     *zoom:1;
     vertical-align:top;
 }
+
+.product-media{
+    position:relative;
+    display:inline-block;
+    padding-bottom:30px;
+}
+
+.product-caption{
+    background:rgba(255,255,255, .75);
+    color:#000;
+    font-family:Helvetica;
+    font-size:1em;
+    width:100%;
+    font-weight:600;
+    position:absolute;
+    top: 0;
+    padding:1ex;
+}
+
+.product-tile img{
+    max-width: 100%;
+}
