--- a/public/templates/nav.hbs
+++ b/public/templates/nav.hbs
@@ -13,7 +13,9 @@
       <ul class="nav navbar-nav pull-right">
         {{#if currentUser}}
           <li><a href="#">{{currentUser.email}}</a></li>
+          <li><a id="signout" href="#">Sign out</a></li>
         {{else}}
+          <li><a href="/#/signup">Sign up</a></li>
           <li><a href="/#/signin">Sign in</a></li>
         {{/if}}
       </ul>
