--- a/public/templates/signin.hbs
+++ b/public/templates/signin.hbs
@@ -11,7 +11,7 @@
         <h3 class="panel-title">Sign in</h3>
       </div>
       <div class="panel-body">
-          <form role="form">
+          <form id="signin-form" role="form">
             <div class="form-group">
               <label for="email">Email</label>
               <input type="email" class="form-control" id="email" value="{{email}}"/>
