--- a/public/templates/product-new.hbs
+++ b/public/templates/product-new.hbs
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <h1>Add a product</h1>
-  <form role="form">
+  <form id="product-form" role="form">
     <div class="form-group">
       <label for="name">Name</label>
       <select class="form-control" id="name" placeholder="Enter a name..."></select>
