--- a/public/templates/signup.hbs
+++ b/public/templates/signup.hbs
@@ -11,7 +11,7 @@
         <h3 class="panel-title">Sign up</h3>
       </div>
       <div class="panel-body">
-          <form role="form">
+          <form id="signup-form" role="form">
             <div class="form-group">
               <label for="username">Username</label>
               <input type="text" class="form-control" id="username" value="{{model.username}}"/>
