changed display on navbar to username

--- a/public/templates/nav.hbs
+++ b/public/templates/nav.hbs
@@ -12,7 +12,7 @@
     <div class="navbar-collapse collapse" style="height: 1px;">
       <ul class="nav navbar-nav pull-right">
         {{#if currentUser}}
-          <li><a href="#">{{currentUser.email}}</a></li>
+          <li><a href="#">{{currentUser.username}}</a></li>
           <li><a id="signout" href="#">Sign out</a></li>
         {{else}}
           <li><a href="/#/signup">Sign up</a></li>
