added thumbnail selector to product creation page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -136,8 +136,8 @@ body h1 {
 }
 
 .product-caption{
-    background:rgba(255,255,255, .75);
-    color:#000;
+    background:rgba(153,184,152, .75);
+    color:#2A363B;
     font-family:Helvetica;
     font-size:1em;
     width:100%;
