--- a/public/templates/product-new.hbs
+++ b/public/templates/product-new.hbs
@@ -10,6 +10,11 @@
       <label for="insta">Instagram Tag</label>
       <select class="form-control" id="insta" placeholder="Enter the Instagram Tag for this product"></select>
     </div>
+
+    <div class="form-group picker" id="photo-selector">
+      
+    </div>
+
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
 </div>
