--- a/public/templates/category.hbs
+++ b/public/templates/category.hbs
@@ -5,7 +5,7 @@
       {{#each products}}
         <div class="col-xs-6 col-md-3 product-media"> 
             <a href="/#/products/{{id}}">
-                <img src="{{images.0.images.low_resolution.url}}">
+                <img src="{{thumbnail}}">
                 <div class="product-caption">
                     {{name}}
                 </div>
