--- a/public/templates/nav.hbs
+++ b/public/templates/nav.hbs
@@ -10,16 +10,18 @@
       <a class="navbar-brand" href="#"><img src="/img/small.png" alt="Simple Reviews"></a>
     </div>
     <div class="navbar-collapse collapse" style="height: 1px;">
-      <ul class="nav navbar-nav pull-right">
+      <ul class="nav navbar-nav navbar-right">
         {{#if currentUser}}
-          <li>
-            <a href="#">
+          <li class="dropdown">
+            <a data-toggle="dropdown" href="#">
               <img src="http://avatars.io/email/{{currentUser.email}}" class="img-rounded" height="22"/>
               {{currentUser.username}}
             </a>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+              <li><a href="/#/products/new"><i class="fa fa-plus"></i> Add a product</a></li>
+              <li><a id="signout" href="#"><i class="fa fa-sign-out"></i> Sign out</a></li>
+            </ul>
           </li>
-          <li><a href="/#/products/new"><i class="fa fa-plus"></i></a></li>
-          <li><a id="signout" href="#"><i class="fa fa-sign-out"></i></a></li>
         {{else}}
           <li><a href="/#/signup">Sign up</a></li>
           <li><a href="/#/signin">Sign in</a></li>
