--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,6 @@
 body {
   padding-top: 50px;
   font: 14px Helvetica, Arial, sans-serif;
-  background-color:#E9E9E9;
 }
 
 body .navbar-brand {
@@ -28,16 +27,23 @@ body .alert {
   padding-right: 40px;
 }
 
+/*
 .list-group-item {
     font-weight:bold;
     margin-bottom:5px;
     border:0;
 }
+*/
 
+/*
 .badge {
     color:#000;
     background-color:#FFF;
     border-radius:0;
+}*/
+
+.badge.badge-green {
+  background-color: #AED1A9;
 }
 
 .add-review {
@@ -92,6 +98,19 @@ body .alert {
   width: 50%;
   float: left;
   padding-right: 20px;
+}
+
+.panel-body {
+  overflow: hidden;
+}
+
+.overflow-wrapper {
+  max-width: 100%;
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  vertical-align: top;
+  white-space: nowrap;
 }
 
 .auth-form {
@@ -217,7 +236,7 @@ a {
 }
 
 div.col-xs-6 col-md-3 a{
-    margin:10px;   
+    margin:10px;
 }
 
 .categories-hyper {
@@ -231,7 +250,3 @@ div.col-xs-6 col-md-3 a{
 h4 {
     margin:10px;
 }
-
-
-
-
