--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -1,8 +1,13 @@
 <div class="wrapper">
-    <div class="page-header">
+    <br>
+    <div class="panel panel-default">
+      <div class="panel-body">
         <h1>{{name}} <small>{{product_data.model}}</small></h1>
-        <a href="#/categories/{{category.id}}"><span class="label label-primary">{{category}}</span></a> 
-        <span class="label label-default">{{product_data.brand}}</span>
+      </div>
+      <div class="panel-footer">
+        <a href="#/categories/{{categories.id}}"><span class="badge badge-green">{{categories.name}}</span></a>
+        <span class="badge badge-green">{{product_data.brand}}</span>
+      </div>
     </div>
 
     <div class="container-fluid">
@@ -10,7 +15,7 @@
             <div class="col-xs-6 text-center">
                 <img src="/img/positive.png" src="Positive">
                 <hr>
-            </div> 
+            </div>
             <div class="col-xs-6 text-center">
                 <img src="/img/negative.png" src="Negative">
                 <hr>
@@ -19,11 +24,7 @@
         <div class="row">
             <div class="col-xs-6">
                 <div id="positive" class="list-group">
-                    <a href="" class="list-group-item">
-                        <span class="badge"><h3>#</h3></span>
-                        <h3>Positive Reviews</h3>
-                    </a>
-
+                  <h3>Positive Reviews</h3>
                   {{#each positiveReviews}}
                     <a href="" class="list-group-item list-group-item-success">
                         <span class="badge">{{count}}</span>
@@ -33,12 +34,8 @@
                 </div>
             </div>
             <div class="col-xs-6">
+                <h3>Negative Reviews</h3>
                 <div id="negative" class="list-group">
-                    <a href="" class="list-group-item">
-                        <span class="badge"><h3>#</h3></span>
-                        <h3>Negative Reviews</h3>
-                    </a>
-
                   {{#each negativeReviews}}
                     <a href="" class="list-group-item list-group-item-danger">
                         <span class="badge">{{count}}</span>
