--- a/public/templates/categories.hbs
+++ b/public/templates/categories.hbs
@@ -23,7 +23,7 @@
           <span class="badge badge-green pull-right">{{products.length}} Products</span>
           <div class="overflow-wrapper">
             {{#each products}}
-            <a href="#/products/{{id}}"><img src="{{thumbnail}}" class="img-rounded" height="20"/></a>
+            <a href="#/products/{{id}}" data-toggle="tooltip" title="{{name}}" data-placement="bottom"><img src="{{thumbnail}}" class="img-rounded" height="20"/></a>
             {{/each}}
           </div>
         </div>
