more product template changes

--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -11,6 +11,7 @@
       </div>
     </div>
 
+    {{#if reviews.length}}
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-6 text-center">
@@ -50,6 +51,7 @@
                 </div>
             </div>
         </div>
+        {{/if}}
         <div class="row">
             <div class="col-xs-6">
                 <form id='add-positive' class="form-inline text-center">
