added query params to the search route

--- a/public/templates/product-search.hbs
+++ b/public/templates/product-search.hbs
@@ -21,5 +21,7 @@
         <span class="badge badge-green"># of Reviews</span>
       </div>
     </div>
+  {{else}}
+    Nothing found.
   {{/each}}
 </div>
