--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,9 +24,14 @@
   }
 }
 
+html{
+  height:100%;
+}
 body {
   padding-top: 50px;
   font: 14px Helvetica, Arial, sans-serif;
+  position:relative;
+  min-height:100%;
 }
 
 body .navbar-brand {
@@ -49,9 +54,19 @@ div .text-center {
     box-shadow:0px 2px 2px 0px rgba(0, 0, 0, 0.1), 0px 1px 0px 0px rgba(0, 0, 0, 0.1);
 }
 
+.push, .footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #2A363B;
+  margin-top:40px;
+}
+
 .wrapper {
   width: 860px;
-  margin: 0 auto;
+  min-height:100%;
+  margin: 0 auto -60px;
   padding-left: 40px;
   padding-right: 40px;
 }
