--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -58,15 +58,20 @@ div .text-center {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px;
-  background-color: #2A363B;
-  margin-top:40px;
+  height: 1em;
+  margin-top:3em;
+  color:#000;
+  background:#fff;
+  font-size:3ex;
+  font-weight:300;
+  text-align:right;
+  vertical-align:middle;
 }
 
 .wrapper {
   width: 860px;
   min-height:100%;
-  margin: 0 auto -60px;
+  margin: 0 auto -3em;
   padding-left: 40px;
   padding-right: 40px;
 }
