--- a/public/templates/footer.hbs
+++ b/public/templates/footer.hbs
@@ -1,3 +1,5 @@
-<div class="container wrapper">
-  <p class="text-muted">Simple Reviews</p>
+<div class="wrapper">
+    <div class="container wrapper">
+      <p class="text-muted">Simple Reviews</p>
+    </div>
 </div>
