added breadcrumbs to products and categories

--- a/public/templates/category.hbs
+++ b/public/templates/category.hbs
@@ -1,4 +1,8 @@
 <div class="wrapper">
+  <ol class="breadcrumb">
+    <li><a href="/">Categories</a></li>
+    <li class="active">{{name}}</li>
+  </ol>
   <h1>{{name}}</h1>
   {{#each products}}
     <div class="panel panel-default">
