--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -1,4 +1,9 @@
 <div class="wrapper">
+    <ol class="breadcrumb">
+      <li><a href="/">Categories</a></li>
+      <li><a href="#/categories/{{categories.id}}">{{categories.name}}</a></li>
+      <li class="active">{{name}}</li>
+    </ol>
     <br>
     <div class="panel panel-default">
       <div class="panel-body">
