fix index page url
If it's not a # it will reload the entire route.

--- a/public/templates/category.hbs
+++ b/public/templates/category.hbs
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <ol class="breadcrumb">
-    <li><a href="/">Categories</a></li>
+    <li><a href="#">Categories</a></li>
     <li class="active">{{name}}</li>
   </ol>
   <h1>{{name}}</h1>
