updated instagram and youtube sections with 3d carousel

--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -72,18 +72,41 @@
         </div>
         <div class="row">
             <h3>Youtube</h3>
-            <div class="media-wrapper">
-              <div id="videos" class="scrolls">
-              </div>
-          </div>
+                <div id="videos" class="scrolls">
+                </div>
+                <div class="text-center">
+                    <div id="video-buttons" class="btn-group btn-group-md">
+                      <button class="left btn btn-default">
+                        ‹
+                      </button>
+                      <button class="right btn btn-default">
+                        › 
+                      </button>
+                    </div>
+                </div>
         </div>
 
         <div class="row">
             <h3>Instagram</h3>
-            <div class="media-wrapper">
+            <div>
               <div id="instagram" class="scrolls">
               </div>
+            <div class="text-center">
+                <div id="instagram-buttons" class="btn-group btn-group-md">
+                  <button class="left btn btn-default">
+                    ‹
+                  </button>
+                  <button class="right btn btn-default">
+                    › 
+                  </button>
+                </div>
+            </div>
           </div>
+          
+
+
+
+
         </div>
 
     </div>
