added youtube info

--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -74,6 +74,10 @@
             <h3>Youtube</h3>
                 <div id="videos" class="scrolls">
                 </div>
+
+
+                <div class="panel panel-default" id="youtube-info"> <div class="panel-heading"> <h3 class="panel-title" id="youtube-title"></h3> </div> <div class="panel-body" id="youtube-body"></div> </div>
+
                 <div class="text-center">
                     <div id="video-buttons" class="btn-group btn-group-md">
                       <button class="left btn btn-default">
