--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -26,7 +26,7 @@
 
 body {
   padding-top: 50px;
-  font: 14px Helvetica, Arial, sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 body .navbar-brand {
@@ -34,6 +34,7 @@ body .navbar-brand {
 }
 
 body h1 {
+  font-family: 'Montserrat', sans-serif;
   margin-bottom: 20px;
 }
 
