--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -13,6 +13,7 @@
       <div class="panel-footer">
         <a href="#/categories/{{categories.id}}"><span class="badge badge-green">{{categories.name}}</span></a>
         <span class="badge badge-green">{{product_data.brand}}</span>
+        <span class="badge badge-green">#{{hashtag}}</span>
       </div>
     </div>
 
@@ -74,9 +75,15 @@
             <h3>Youtube</h3>
                 <div id="videos" class="scrolls">
                 </div>
-
-
-                <div class="panel panel-default" id="youtube-info"> <div class="panel-heading"> <h3 class="panel-title" id="youtube-title"></h3> </div> <div class="panel-body" id="youtube-body"></div> </div>
+                <div class="text-center">
+                    <div class="panel panel-default" id="youtube-info">
+                        <div class="panel-heading"> 
+                            <h3 class="panel-title" id="youtube-title"></h3> 
+                        </div> 
+                        <div class="panel-body" id="youtube-body">
+                        </div>
+                    </div>
+                </div>
 
                 <div class="text-center">
                     <div id="video-buttons" class="btn-group btn-group-md">
