--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -218,7 +218,7 @@ div .text-center {
 .product-caption{
     background:rgba(153,184,152, .75);
     color:#2A363B;
-    font-family:Helvetica;
+    font-family: 'Roboto Condensed', sans-serif;
     font-size:1em;
     width:100%;
     font-weight:600;
@@ -295,4 +295,19 @@ h4 {
 #youtube-title, #youtube-body{
     white-space: nowrap;
     overflow: hidden;
+}
+
+.selectize-control.single .selectize-input.input-active, .selectize-control.single .selectize-input.input-active input {
+    border-color: rgba(255, 255, 255, 3);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 10px rgba(42, 54, 59, .5);
+    outline: 0 none;
+}
+.selectize-dropdown, .selectize-input, .selectize-input input{
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus, .uneditable-input:focus {   
+    border-color: rgba(255, 255, 255, 3);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 10px rgba(42, 54, 59, 3);
+    outline: 0 none;
 }
