--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -350,5 +350,5 @@ textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[ty
 
 .navbar {
     margin: 0px;
-    box-shadow: 0;
+    box-shadow: none;
 }
